:construction: adding table of response codes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,4 +37,12 @@ const { title } = Astro.props;
   .main {
     text-align: center;
   }
+  table {
+    margin: 0 auto;
+    text-align: center;
+    border-collapse: collapse;
+  }
+   table, th, td {
+    border: 1px solid;
+  }
 </style>
