--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+    <meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -28,7 +28,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+    background-color: #f8f8f8;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -37,6 +37,7 @@ const { title } = Astro.props;
   main {
     text-align: center;
     align-items: center;
+    padding: 3rem;
   }
   pre {
     width: fit-content;
@@ -47,8 +48,10 @@ const { title } = Astro.props;
     text-align: center;
     border-collapse: collapse;
   }
-   table, thead, tr,td {
+   table, th, tr,td {
     border: 1px solid;
+    padding: 0.3em;
+
   }
 
 </style>
