--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,10 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+      <meta name="description" content="
+Super simple service to test how your app handles the various http status codes.
+Send me a status code as the first url parameter and I'll respond with that status code and simple body.
+      " />
 		<title>{title}</title>
 	</head>
 	<body>
